[FIX] - Header Link Gaps

--- a/css/ltr.css
+++ b/css/ltr.css
@@ -38,7 +38,7 @@
   }
 
   .cohen-header-link:not(:last-child) {
-    margin-right: 2.34vw;
+    margin-right: 2vw;
     margin-left: 0;
   }
 
