--- a/css/style.css
+++ b/css/style.css
@@ -348,7 +348,7 @@ body {
   }
 
   .cohen-header-link:not(:last-child) {
-    margin-left: 2.34vw;
+    margin-left: 2vw;
   }
 
   .cohen-header-links,
